// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoryTree > snapshots > should render empty tree 1`] = `
<div>
  <aside
    class="categoryTree"
  >
    <div
      class="categoryTree__header"
    >
      <h2
        class="categoryTree__title"
      >
        Categories
      </h2>
      <button
        aria-label="Add category"
        class="categoryTree__add"
        type="button"
      >
        +
      </button>
    </div>
    <ul
      class="categoryTree__list"
    />
    <dialog
      class="modal-dialog"
    >
      <div
        class="modal"
      >
        <div
          class="modal__header"
        >
          <h2
            class="modal__title"
          >
            Add Category
          </h2>
          <button
            aria-label="Close"
            class="modal__close"
            type="button"
          >
            ×
          </button>
        </div>
        <form
          class="modal__body"
        >
          <div
            class="modal__field"
          >
            <label
              class="modal__label"
              for="category-name"
            >
              Name 
              <span
                class="modal__required"
              >
                *
              </span>
            </label>
            <input
              class="modal__input"
              id="category-name"
              placeholder="Category name"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="modal__field"
          >
            <label
              class="modal__label"
              for="category-description"
            >
              Description
            </label>
            <textarea
              class="modal__textarea"
              id="category-description"
              placeholder="Optional description"
              rows="3"
            />
          </div>
          <div
            class="modal__field"
          >
            <label
              class="modal__label"
              for="category-parent"
            >
              Parent Category
            </label>
            <select
              class="modal__select"
              id="category-parent"
            >
              <option
                value=""
              >
                None (root level)
              </option>
              <option
                value="1"
              >
                Root 1
              </option>
              <option
                value="2"
              >
                Child 1-1
              </option>
              <option
                value="3"
              >
                Child 1-2
              </option>
              <option
                value="4"
              >
                Grandchild 1-1-1
              </option>
              <option
                value="5"
              >
                Root 2
              </option>
            </select>
          </div>
          <div
            class="modal__field"
          >
            <div
              class="visibility-toggle"
            >
              <label
                class="visibility-label"
              >
                Visibility
              </label>
              <div
                class="visibility-options"
              >
                <button
                  class="visibility-option selected"
                  title="Inherit from parent (Private)"
                  type="button"
                >
                  Inherit (
                  Private
                  )
                </button>
                <button
                  class="visibility-option "
                  disabled=""
                  title="Mark as public"
                  type="button"
                >
                  Public
                </button>
                <button
                  class="visibility-option "
                  title="Mark as private"
                  type="button"
                >
                  Private
                </button>
              </div>
              <div
                class="visibility-note"
              >
                Parent is private; cannot override to public
              </div>
              <div
                class="visibility-effective"
              >
                Effective: 
                <span
                  class="private"
                >
                  Private
                </span>
              </div>
            </div>
          </div>
          <div
            class="modal__actions"
          >
            <button
              class="detail__btn detail__btn--primary"
              disabled=""
              type="submit"
            >
              Create
            </button>
            <button
              class="detail__btn detail__btn--secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </dialog>
  </aside>
</div>
`;

exports[`CategoryTree > snapshots > should render tree with categories 1`] = `
<div>
  <aside
    class="categoryTree"
  >
    <div
      class="categoryTree__header"
    >
      <h2
        class="categoryTree__title"
      >
        Categories
      </h2>
      <button
        aria-label="Add category"
        class="categoryTree__add"
        type="button"
      >
        +
      </button>
    </div>
    <ul
      class="categoryTree__list"
    >
      <li
        class="categoryTree__node"
      >
        <div
          class="categoryTree__row"
          style="padding-left: 0px;"
        >
          <button
            aria-label="Collapse Root 1"
            class="categoryTree__toggle"
            type="button"
          >
            ▾
          </button>
          <button
            class="categoryTree__item"
            type="button"
          >
            Root 1
          </button>
          <button
            aria-label="Edit Root 1"
            class="categoryTree__edit"
            type="button"
          >
            ✎
          </button>
        </div>
        <ul
          class="categoryTree__children"
        >
          <li
            class="categoryTree__node"
          >
            <div
              class="categoryTree__row"
              style="padding-left: 14px;"
            >
              <button
                aria-label="Expand Child 1-1"
                class="categoryTree__toggle"
                type="button"
              >
                ▸
              </button>
              <button
                class="categoryTree__item"
                type="button"
              >
                Child 1-1
              </button>
              <button
                aria-label="Edit Child 1-1"
                class="categoryTree__edit"
                type="button"
              >
                ✎
              </button>
            </div>
          </li>
          <li
            class="categoryTree__node"
          >
            <div
              class="categoryTree__row"
              style="padding-left: 14px;"
            >
              <span
                aria-hidden="true"
                class="categoryTree__toggle-spacer"
              >
                ▸
              </span>
              <button
                class="categoryTree__item"
                type="button"
              >
                Child 1-2
              </button>
              <button
                aria-label="Edit Child 1-2"
                class="categoryTree__edit"
                type="button"
              >
                ✎
              </button>
            </div>
          </li>
        </ul>
      </li>
      <li
        class="categoryTree__node"
      >
        <div
          class="categoryTree__row"
          style="padding-left: 0px;"
        >
          <span
            aria-hidden="true"
            class="categoryTree__toggle-spacer"
          >
            ▸
          </span>
          <button
            class="categoryTree__item"
            type="button"
          >
            Root 2
          </button>
          <button
            aria-label="Edit Root 2"
            class="categoryTree__edit"
            type="button"
          >
            ✎
          </button>
        </div>
      </li>
    </ul>
    <dialog
      class="modal-dialog"
    >
      <div
        class="modal"
      >
        <div
          class="modal__header"
        >
          <h2
            class="modal__title"
          >
            Add Category
          </h2>
          <button
            aria-label="Close"
            class="modal__close"
            type="button"
          >
            ×
          </button>
        </div>
        <form
          class="modal__body"
        >
          <div
            class="modal__field"
          >
            <label
              class="modal__label"
              for="category-name"
            >
              Name 
              <span
                class="modal__required"
              >
                *
              </span>
            </label>
            <input
              class="modal__input"
              id="category-name"
              placeholder="Category name"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="modal__field"
          >
            <label
              class="modal__label"
              for="category-description"
            >
              Description
            </label>
            <textarea
              class="modal__textarea"
              id="category-description"
              placeholder="Optional description"
              rows="3"
            />
          </div>
          <div
            class="modal__field"
          >
            <label
              class="modal__label"
              for="category-parent"
            >
              Parent Category
            </label>
            <select
              class="modal__select"
              id="category-parent"
            >
              <option
                value=""
              >
                None (root level)
              </option>
              <option
                value="1"
              >
                Root 1
              </option>
              <option
                value="2"
              >
                Child 1-1
              </option>
              <option
                value="3"
              >
                Child 1-2
              </option>
              <option
                value="4"
              >
                Grandchild 1-1-1
              </option>
              <option
                value="5"
              >
                Root 2
              </option>
            </select>
          </div>
          <div
            class="modal__field"
          >
            <div
              class="visibility-toggle"
            >
              <label
                class="visibility-label"
              >
                Visibility
              </label>
              <div
                class="visibility-options"
              >
                <button
                  class="visibility-option selected"
                  title="Inherit from parent (Private)"
                  type="button"
                >
                  Inherit (
                  Private
                  )
                </button>
                <button
                  class="visibility-option "
                  disabled=""
                  title="Mark as public"
                  type="button"
                >
                  Public
                </button>
                <button
                  class="visibility-option "
                  title="Mark as private"
                  type="button"
                >
                  Private
                </button>
              </div>
              <div
                class="visibility-note"
              >
                Parent is private; cannot override to public
              </div>
              <div
                class="visibility-effective"
              >
                Effective: 
                <span
                  class="private"
                >
                  Private
                </span>
              </div>
            </div>
          </div>
          <div
            class="modal__actions"
          >
            <button
              class="detail__btn detail__btn--primary"
              disabled=""
              type="submit"
            >
              Create
            </button>
            <button
              class="detail__btn detail__btn--secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </dialog>
  </aside>
</div>
`;

exports[`CategoryTree > snapshots > should render with selected category 1`] = `
<div>
  <aside
    class="categoryTree"
  >
    <div
      class="categoryTree__header"
    >
      <h2
        class="categoryTree__title"
      >
        Categories
      </h2>
      <button
        aria-label="Add category"
        class="categoryTree__add"
        type="button"
      >
        +
      </button>
    </div>
    <ul
      class="categoryTree__list"
    >
      <li
        class="categoryTree__node"
      >
        <div
          class="categoryTree__row"
          style="padding-left: 0px;"
        >
          <button
            aria-label="Collapse Root 1"
            class="categoryTree__toggle"
            type="button"
          >
            ▾
          </button>
          <button
            class="categoryTree__item"
            type="button"
          >
            Root 1
          </button>
          <button
            aria-label="Edit Root 1"
            class="categoryTree__edit"
            type="button"
          >
            ✎
          </button>
        </div>
        <ul
          class="categoryTree__children"
        >
          <li
            class="categoryTree__node"
          >
            <div
              class="categoryTree__row"
              style="padding-left: 14px;"
            >
              <button
                aria-label="Expand Child 1-1"
                class="categoryTree__toggle"
                type="button"
              >
                ▸
              </button>
              <button
                class="categoryTree__item categoryTree__item--active"
                type="button"
              >
                Child 1-1
              </button>
              <button
                aria-label="Edit Child 1-1"
                class="categoryTree__edit"
                type="button"
              >
                ✎
              </button>
            </div>
          </li>
          <li
            class="categoryTree__node"
          >
            <div
              class="categoryTree__row"
              style="padding-left: 14px;"
            >
              <span
                aria-hidden="true"
                class="categoryTree__toggle-spacer"
              >
                ▸
              </span>
              <button
                class="categoryTree__item"
                type="button"
              >
                Child 1-2
              </button>
              <button
                aria-label="Edit Child 1-2"
                class="categoryTree__edit"
                type="button"
              >
                ✎
              </button>
            </div>
          </li>
        </ul>
      </li>
      <li
        class="categoryTree__node"
      >
        <div
          class="categoryTree__row"
          style="padding-left: 0px;"
        >
          <span
            aria-hidden="true"
            class="categoryTree__toggle-spacer"
          >
            ▸
          </span>
          <button
            class="categoryTree__item"
            type="button"
          >
            Root 2
          </button>
          <button
            aria-label="Edit Root 2"
            class="categoryTree__edit"
            type="button"
          >
            ✎
          </button>
        </div>
      </li>
    </ul>
    <dialog
      class="modal-dialog"
    >
      <div
        class="modal"
      >
        <div
          class="modal__header"
        >
          <h2
            class="modal__title"
          >
            Add Category
          </h2>
          <button
            aria-label="Close"
            class="modal__close"
            type="button"
          >
            ×
          </button>
        </div>
        <form
          class="modal__body"
        >
          <div
            class="modal__field"
          >
            <label
              class="modal__label"
              for="category-name"
            >
              Name 
              <span
                class="modal__required"
              >
                *
              </span>
            </label>
            <input
              class="modal__input"
              id="category-name"
              placeholder="Category name"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="modal__field"
          >
            <label
              class="modal__label"
              for="category-description"
            >
              Description
            </label>
            <textarea
              class="modal__textarea"
              id="category-description"
              placeholder="Optional description"
              rows="3"
            />
          </div>
          <div
            class="modal__field"
          >
            <label
              class="modal__label"
              for="category-parent"
            >
              Parent Category
            </label>
            <select
              class="modal__select"
              id="category-parent"
            >
              <option
                value=""
              >
                None (root level)
              </option>
              <option
                value="1"
              >
                Root 1
              </option>
              <option
                value="2"
              >
                Child 1-1
              </option>
              <option
                value="3"
              >
                Child 1-2
              </option>
              <option
                value="4"
              >
                Grandchild 1-1-1
              </option>
              <option
                value="5"
              >
                Root 2
              </option>
            </select>
          </div>
          <div
            class="modal__field"
          >
            <div
              class="visibility-toggle"
            >
              <label
                class="visibility-label"
              >
                Visibility
              </label>
              <div
                class="visibility-options"
              >
                <button
                  class="visibility-option selected"
                  title="Inherit from parent (Private)"
                  type="button"
                >
                  Inherit (
                  Private
                  )
                </button>
                <button
                  class="visibility-option "
                  disabled=""
                  title="Mark as public"
                  type="button"
                >
                  Public
                </button>
                <button
                  class="visibility-option "
                  title="Mark as private"
                  type="button"
                >
                  Private
                </button>
              </div>
              <div
                class="visibility-note"
              >
                Parent is private; cannot override to public
              </div>
              <div
                class="visibility-effective"
              >
                Effective: 
                <span
                  class="private"
                >
                  Private
                </span>
              </div>
            </div>
          </div>
          <div
            class="modal__actions"
          >
            <button
              class="detail__btn detail__btn--primary"
              disabled=""
              type="submit"
            >
              Create
            </button>
            <button
              class="detail__btn detail__btn--secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </dialog>
  </aside>
</div>
`;
